fix text  alignment amount paragraph

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,6 +177,7 @@ h5 {
 .prizes-cards p {
   font-weight: bold;
   font-size: 18px;
+  text-align: center;
 }
 
 .prizes-container {
